--- a/template/base.html
+++ b/template/base.html
@@ -37,8 +37,10 @@
 
 {% endblock %}
 
-
-{% block main %}{% endblock %} 
+<div class="main">
+{% block main %}{% endblock %}
+</div>
+ 
 {% block footer %}{% endblock %}
 </body>
 {% endautoescape %}
