--- a/template/base.html
+++ b/template/base.html
@@ -20,7 +20,11 @@
 	<!-- jQuery dataTable -->
 	<script type="text/javascript" src="/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
 	<LINK REL=StyleSheet HREF="/static/DataTables-1.9.4/media/css/jquery.dataTables.css" TYPE="text/css" MEDIA=screen>
+
+	<!-- carousel -->
+	<script type="text/javascript" src="/static/carouFredSel-6.2.0/jquery.carouFredSel-6.2.0.js"></script>
 	
+		
 	<LINK REL=StyleSheet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
 	<LINK REL=StyleSheet HREF="/static/css/screen.css" TYPE="text/css" MEDIA=screen>
 		
