Add easing js to repo

--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -83,7 +83,7 @@
 	    });
 	    j$('#shopping-cart-visible-switch').on('click',function(){
 	    	j$(this).hide();
-	    	j$('#shopping-cart').slideToggle(600);
+	    	j$('#shopping-cart').slideToggle({'duration':400,'easing':'easeOutBounce'});
 	    });
 
 		// cart table
