--- a/template/base.html
+++ b/template/base.html
@@ -23,6 +23,10 @@
 
 	<!-- carousel -->
 	<script type="text/javascript" src="/static/carouFredSel-6.2.0/jquery.carouFredSel-6.2.0.js"></script>
+
+	<!-- easing -->
+	<!-- http://gsgd.co.uk/sandbox/jquery/easing/ -->
+	<script type="text/javascript" src="/static/easing/jquery.easing.min.js"></script>
 	
 		
 	<LINK REL=StyleSheet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
