--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -143,6 +143,7 @@
 	</ul>
 	</div>
 	
+	{% if cart.fills|length > 0 %}
 	<div>
 	{% if cart.status=='Open' and me.can_be_nur() %}
 		<button class="my-button" item="approval-process">Submit for Approval</button>
@@ -151,6 +152,7 @@
 		<button class="my-button" item="approval-process">Reject</button>
 	{% endif %}
 	</div>
+	{% endif %}
 
 	<!-- Shipping inputs are available after approval and for DOC -->
 	{% if cart.status=='Ready for Processing'  and me.can_be_doc() %}
