--- a/template/BankingCart.html
+++ b/template/BankingCart.html
@@ -90,7 +90,7 @@
     }
         
     j$(document).ready(function(){
-		j$('#tabs').tabs();
+		j$('#tabs-min').tabs();
 		    	
     	// if changing total payable fund
     	j$('#input-total-payable-fund').on('change',function(){
@@ -201,7 +201,7 @@
 
 {% block main %}
 
-<div id="tabs">
+<div id="tabs-min">
 	<ul>
     	<li><a href="#tabs-1">Register Payment to Sellers</a></li>
         <li><a href="#tabs-2">Register Earnings</a></li>
